# luawow

./: .gitattributes  Cargo.toml  readme.md
.github/workflows/: release.yaml
assets/dialogue/: follower.yarn
assets/scenes/: World.glb  World2.glb  registry.json
assets/scenes/characters/: Skeleton_Mage.glb  Skeleton_Rogue.glb
assets/scenes/kenney/Fantasy Town Kit/: balconyWall.glb  balconyWallFence.glb  bannerRed.glb  blade.glb  cart.glb  cartHigh.glb  chimneyTop.glb  fenceCurved.glb  fenceGate.glb  fountainCenter.glb  fountainCorner.glb  fountainCornerInner.glb  fountainCurved.glb  fountainEdge.glb  hedge.glb  hedgeGate.glb  hedgeLargeCurved.glb  pillarWood.glb  planksHalf.glb  planksOpening.glb  poles.glb  road.glb  roadCornerInner.glb  roadCurbEnd.glb  roadEdgeSlope.glb  roadSlope.glb  rockSmall.glb  rockWide.glb  roof.glb  roofCorner.glb  roofCornerInner.glb  roofCornerRound.glb  roofFlat.glb  roofHighCornerRound.glb  roofHighRight.glb  roofRight.glb  stairsFull.glb  stairsFullCornerOuter.glb  stairsStoneHandrail.glb  stairsStoneRound.glb  (+46 more)
assets/scenes/kenney/Fantasy Town Kit/Models/GLTF format/: bannerGreen.glb  chimney.glb  chimneyBase.glb  fence.glb  fenceBroken.glb  fountainCornerInnerSquare.glb  fountainRound.glb  fountainRoundDetail.glb  fountainSquare.glb  fountainSquareDetail.glb  hedgeCurved.glb  hedgeLarge.glb  hedgeLargeGate.glb  lantern.glb  overhang.glb  pillarStone.glb  planks.glb  polesHorizontal.glb  roadBend.glb  roadCorner.glb  roadCurb.glb  roadEdge.glb  rockLarge.glb  roofGable.glb  roofGableDetail.glb  (+56 more)
assets/scenes/kenney/Food Kit/: advocado-half.glb  apple-half.glb  apple.glb  avocado.glb  bacon-raw.glb  bacon.glb  bag-flat.glb  bag.glb  banana.glb  barrel.glb  beet.glb  bottle-ketchup.glb  bottle-musterd.glb  bottle-oil.glb  bowl-broth.glb  bowl-cereal.glb  bowl-soup.glb  bowl.glb  bread.glb  broccoli.glb  burger-cheese-double.glb  burger-cheese.glb  burger-double.glb  burger.glb  cabbage.glb  cake-birthday.glb  cake-slicer.glb  cake.glb  can-open.glb  can-small.glb  can.glb  candy-bar-wrapper.glb  candy-bar.glb  carrot.glb  carton-small.glb  carton.glb  cauliflower.glb  celery-stick.glb  cheese-cut.glb  cheese-slicer.glb  (+160 more)
assets/scenes/kenney/Graveyard Kit/: altar-stone.glb  brick-wall-curve-small.glb  brick-wall-end.glb  coffin-old.glb  cross-wood.glb  cross.glb  crypt-door.glb  crypt-large-roof.glb  crypt-large.glb  crypt-small-entrance-alternative.glb  crypt-small-entrance.glb  crypt-small-roof.glb  crypt-small.glb  debris-wood.glb  debris.glb  detail-bowl.glb  fence-damaged.glb  fence-gate.glb  fence.glb  gravestone-bevel.glb  gravestone-broken.glb  gravestone-cross-large.glb  gravestone-debris.glb  gravestone-flat-open.glb  gravestone-flat.glb  gravestone-round.glb  gravestone-wide.glb  hay-bale-bundled.glb  iron-fence-bar.glb  iron-fence-border-column.glb  iron-fence-border-gate.glb  iron-fence-border.glb  iron-fence-curve.glb  iron-fence.glb  lightpost-all.glb  lightpost-single.glb  pillar-square.glb  pine-crooked.glb  pine-fall.glb  pine.glb  (+10 more)
assets/scenes/kenney/Mini Arena/: banner.glb  block.glb  border-corner.glb  border-straight.glb  character-soldier.glb  floor-detail.glb  floor.glb  statue.glb  tree.glb  wall.glb  weapon-rack.glb
assets/scenes/kenney/Mini Dungeon/: banner.glb  column.glb  floor-detail.glb  floor.glb  rocks.glb  stones.glb  trap.glb  wall-half.glb  wall-opening.glb  wall.glb
assets/scenes/kenney/Pirate Kit/: boat_small.gltf  bottle.gltf  bottleLarge.gltf  cannonBall.gltf  cannonLarge.gltf  cannonMobile.gltf  formationLarge_rock.gltf  formation_rock.gltf  formation_stone.gltf  hole.gltf  palm_detailed_long.gltf  palm_detailed_short.gltf  palm_long.gltf  palm_short.gltf  pirate_captain.gltf  pirate_officer.gltf  ship_dark.gltf  sword.gltf  tower.gltf
assets/scenes/kenney/Prototype Kit/: animal-dog.glb  animal-horse.glb  button-floor-round.glb  button-floor-square-small.glb  coin.glb  column-triangle.glb  column.glb  crate-color.glb  crate.glb  door-garage.glb  door-rotate.glb  door-sliding-double-round.glb  door-sliding-double-wide.glb  door-sliding-double.glb  figurine-cube-detailed.glb  figurine-cube.glb  figurine.glb  flag.glb  floor-diagonal.glb  floor-small-diagonal.glb  floor-square.glb  floor-thick-corner-diagonal.glb  floor-thick-corner-rounded.glb  floor-thick.glb  hat-cap.glb  indicator-doorway.glb  indicator-round-a.glb  indicator-round-c.glb  indicator-special-cross.glb  indicator-square-c.glb  indicator-square-e.glb  indicator-square-f.glb  ladder-top.glb  lever-double.glb  lever-single.glb  number-0.glb  number-1.glb  number-2.glb  number-3.glb  number-4.glb  (+46 more)
assets/scenes/kenney/Space Station Kit/: balcony-floor-corner.glb  balcony-floor.glb  balcony-rail-corner.glb  balcony-rail.glb  bed-double.glb  bed-single-cover.glb  bed-single.glb  chair-armrest.glb  chair-cushion-headrest.glb  chair-cushion.glb  chair.glb  computer-screen.glb  computer-system.glb  computer-wide.glb  computer.glb  container-flat.glb  container-wide.glb  container.glb  door-double-closed.glb  door-double-half.glb  door-double.glb  door-single-closed.glb  floor-corner.glb  floor-detail.glb  floor-panel-corner.glb  floor-panel.glb  pipe-bend.glb  pipe-end-colored.glb  pipe-end.glb  pipe.glb  rail-narrow.glb  skip-rocks.glb  skip.glb  stairs-corner-inner.glb  stairs-corner.glb  stairs-handrail-single.glb  stairs-handrail.glb  stairs-ramp.glb  stairs-small-corner.glb  stairs-small-edge-handrail.glb  (+19 more)
assets/scenes/kenney/Watercraft Pack/: boat-fan.glb  boat-house-a.glb  boat-house-b.glb  boat-house-d.glb  boat-row-large.glb  boat-row-small.glb  boat-sail-b.glb  boat-speed-b.glb  boat-speed-c.glb  boat-speed-h.glb  boat-tow-a.glb  boat-tug-a.glb  boat-tug-b.glb  buoy.glb  cargo-container-b.glb  cargo-container-c.glb  cargo-pile-a.glb  gate-finish.glb  ramp-wide.glb  ship-cargo-a.glb  ship-large.glb  ship-ocean-liner.glb  ship-small.glb
assets/zone_root/: manifest.json
credits/: credits.md
src/: main.rs
src/save_loader/: mod.rs
src/world_editor/: mod.rs
src/zone_editor/: mod.rs
test_saves/basic/: manifest.json
(+271 files in other folders)
