[package]
authors = ["Jessica Collins <small.sock79281@fastmail.com>"]
name = "luawow"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
egui = { version = "0.29" }
egui-file-dialog = "0.6"
bevy = { version = "0.14", features = ["default"], default-features = true }
bevy_atmosphere = "0.10"
warbler_grass = "0.6"
bevy-tnua = "0.19"
bevy-tnua-avian3d = { version = "0.1" }
bevy_editor_pls = { version = "0.9", optional = true }
bevy_egui = "0.29"
bevy_hanabi = { version = "0.12", default-features = false, features = ["3d"] }
bevy_save = { git = "https://github.com/xenacool/bevy_save.git" }
bevy_scriptum = { version = "0.6", features = ["lua"] }
bevy_yarnspinner = "0.3"
bevy_yarnspinner_example_dialogue_view = "0.3"
oxidized_navigation = { features = ["avian3d"], git = "https://github.com/TheGrimsey/oxidized_navigation.git", rev = "0eb0edb0f6400d30704b8b072d3e5f52c060925e" }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[features]
default = ["dev"]
dev = [
    "dep:bevy_editor_pls",
    "bevy/file_watcher",
    "bevy/dynamic_linking",
    "oxidized_navigation/debug_draw",
]
tracing = ["bevy/trace_chrome"]

#
#[package]
#authors = ["Jessica Collins <small.sock79281@fastmail.com>"]
#edition = "2021"
#name = "luawow"
#version = "0.5.0"
#license = "MIT OR Apache-2.0 OR CC0-1.0"
#exclude = ["assets/"]
#description = "The all-in-one Bevy 3D game template for desktop."
#repository = "https://github.com/janhohenheim/foxtrot"
#keywords = ["gamedev", "bevy", "template", "game"]
#categories = ["game-development"]
#homepage = "https://janhohenheim.github.io/foxtrot/"
#
#[features]
#default = ["dev"]
#dev = [
#    "dep:bevy_editor_pls",
#    "bevy/file_watcher",
#    "bevy/dynamic_linking",
#    "oxidized_navigation/debug_draw",
#]
#tracing = ["bevy/trace_chrome"]
#
#[dependencies.bevy]
#version = "0.13"
#features = [
#    "jpeg",
#]
#
#[dependencies]
## keep the following in sync with Bevy's dependencies
### https://github.com/bevyengine/bevy/blob/v0.13.1/crates/bevy_winit/Cargo.toml#L32
#winit = { version = "0.29", default-features = false }
### https://github.com/bevyengine/bevy/blob/v0.13.1/crates/bevy_render/Cargo.toml#L61
#image = { version = "0.24", default-features = false }
### This greatly improves WGPU's performance due to its heavy use of trace! calls
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
#
## generic dependencies
#serde = { version = "1", features = ["derive"] }
#anyhow = "1"
#
## Bevy plugins
#bevy_kira_audio = "0.19"
#bevy_scriptum = { version = "0.6.0", features = ["lua"] }
#bevy_asset_loader = { version = "0.20", features = ["progress_tracking", "standard_dynamic_assets"] }
#bevy_common_assets = { version = "0.10", features = ["ron", "toml"] }
#bevy_egui = "0.25" # version governed by bevy_editor_pls and leafwing-input-manager
#oxidized_navigation = { version = "0.10", features = ["xpbd"] }
#iyes_progress = "0.11"
#leafwing-input-manager = { version = "0.13", features = ["egui"] }
#bevy_dolly = "0.0.3"
#bevy_editor_pls = { version = "0.8.1", optional = true }
#bevy_hanabi = { version = "0.11", default-features = false, features = ["3d"] }
#bevy_yarnspinner = "0.2"
#bevy_yarnspinner_example_dialogue_view = "0.2.1"
#bevy-tnua-xpbd3d = "0.4"
#bevy_xpbd_3d = { version = "0.4", features = ["simd"] }
#bevy-tnua = "0.18"
#bevy_atmosphere = "0.9"
#warbler_grass = "0.6"
#bevy_gltf_blueprints = "0.10"
#bevy_registry_export = "0.3"
#
#[build-dependencies]
#embed-resource = "2"
#
## Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1
#
## Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3
#
## High optimizations for distributing the game
#[profile.release]
#opt-level = 3
#lto = true
#codegen-units = 1
#strip = true
#
#[patch.crates-io]
## Patches that replace syn 1 with syn 2
## Note that windows still uses syn 1 through
## * com-macros and com_macros_support (unlikely to receive updates)
## * windows-implement and windows-interface (updated to syn 2 in Bevy 0.14.0-rc.2)
#egui_dock = { git = "https://github.com/bash/egui_dock.git", branch = "backport-syn-update" } # This change is not PR-worthy. Instead, I made a PR to the actually affected dependency `duplicate`: https://github.com/Emoun/duplicate/pull/62
#
## These patches mainly remove strum and are included in bevy_yarnspinner 0.3.0-rc
#bevy_yarnspinner = { git = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust.git", rev = "c6ab0c9e8c3a5a98f741aaae6adef1cfc272db30" }
#bevy_yarnspinner_example_dialogue_view = { git = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust.git", rev = "c6ab0c9e8c3a5a98f741aaae6adef1cfc272db30" }
#
## Bug fixes
#bevy_hanabi = { git = "https://github.com/djeedai/bevy_hanabi/", rev = "b9a98bdf51be07f8127d2f16b68f1eb86259242f" }
#
