[package]
authors = ["Jessica Collins <small.sock79281@fastmail.com>"]
name = "luawow"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[dependencies]
bevy = { version = "0.14", features = ["default"], default-features = true }
serde = { version = "1", features = ["derive"] }
bevy_egui = "0.29"
egui-file-dialog = "0.6"
bevy_ecs_tilemap = { version = "0.14.0", default-features = false, features = ["serde"] }
bevy_mod_picking = { version = "0.20", features = ["all"] }
bevy_spatial = "0.9"
bevy_atmosphere = "0.10"
warbler_grass = "0.6"
bevy-tnua = "0.19"
bevy-tnua-avian3d = { version = "0.1" }
bevy_editor_pls = { version = "0.9", optional = true }
bevy_hanabi = { version = "0.12", default-features = false, features = ["3d"] }
bevy_save = { git = "https://github.com/xenacool/bevy_save.git" }
bevy_scriptum = { version = "0.6", features = ["lua"] }
bevy_yarnspinner = "0.3"
bevy_yarnspinner_example_dialogue_view = "0.3"
oxidized_navigation = { features = ["avian3d"], git = "https://github.com/TheGrimsey/oxidized_navigation.git", rev = "0eb0edb0f6400d30704b8b072d3e5f52c060925e" }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[features]
default = ["dev"]
dev = [
    "dep:bevy_editor_pls",
    "bevy/file_watcher",
    "bevy/dynamic_linking",
    "oxidized_navigation/debug_draw",
]
tracing = ["bevy/trace_chrome"]